--- a/templates/dataentry/exportdata.html
+++ b/templates/dataentry/exportdata.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Document</title>
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -26,12 +27,32 @@
       integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"
     ></script>
+    <script src="{% static 'js/custom.js' %}"></script>
   </head>
   <body>
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
-    <br>
-    <a href = "{% url 'import_data' %}">Import Data</a>
-    <a href = "{% url 'export_data' %}">Export Data</a>
+    <div class="container">
+      <h3 class="text-center">Export Data From Database Tables</h3>
+      <form
+        action="{% url 'export_data' %}"
+        method="POST"
+
+        style="max-width: 600px; margin: auto; padding-top: 50px"
+      >
+        {% csrf_token %}
+        
+        <div class="form-group">
+          <label for="model_name">Select Database Table</label>
+          <select name="model_name" class="form-control" required>
+            <option value="" disabled selected>Select</option>
+            {% for model in custom_models %}
+            <option value="{{ model }}">{{ model }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <input type="submit" value="Export Data" class="btn btn-primary" />
+
+        {% include 'alerts.html' %}
+      </form>
+    </div>
   </body>
 </html>
