--- a/templates/dataentry/exportdata.html
+++ b/templates/dataentry/exportdata.html
@@ -1,58 +1,39 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
+{% extends 'base.html' %} {% block content %}
 
-    <!-- Optional theme -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
-      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-      crossorigin="anonymous"
-    />
+<div
+  class="container mt-5 shadow"
+  style="
+    background-color: #8bdac1;
+    max-width: 600px;
+    padding: 50px;
+    border-radius: 10px;
+  "
+>
+  <h3 class="text-center">Export Data From Database Tables</h3>
+  <form
+    action="{% url 'export_data' %}"
+    method="POST"
+    style="max-width: 600px; margin: auto; padding-top: 50px"
+  >
+    {% csrf_token %}
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-      crossorigin="anonymous"
-    ></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-  </head>
-  <body>
-    <div class="container">
-      <h3 class="text-center">Export Data From Database Tables</h3>
-      <form
-        action="{% url 'export_data' %}"
-        method="POST"
-
-        style="max-width: 600px; margin: auto; padding-top: 50px"
-      >
-        {% csrf_token %}
-        
-        <div class="form-group">
-          <label for="model_name">Select Database Table</label>
-          <select name="model_name" class="form-control" required>
-            <option value="" disabled selected>Select</option>
-            {% for model in custom_models %}
-            <option value="{{ model }}">{{ model }}</option>
-            {% endfor %}
-          </select>
-        </div>
-        <input type="submit" value="Export Data" class="btn btn-primary" />
-
-        {% include 'alerts.html' %}
-      </form>
+    <div class="form-group">
+      <label for="model_name">Select Database Table</label>
+      <select name="model_name" class="form-control" required>
+        <option value="" disabled selected>Select</option>
+        {% for model in custom_models %}
+        <option value="{{ model }}">{{ model }}</option>
+        {% endfor %}
+      </select>
     </div>
-  </body>
-</html>
+    <div class="form-group">
+      <input
+        type="submit"
+        value="Export Data"
+        class="btn btn-primary"
+      />
+    </div>
+    {% include 'alerts.html' %}
+  </form>
+</div>
+{% endblock %}
