--- a/templates/home.html
+++ b/templates/home.html
@@ -1,37 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
+{% extends 'base.html' %}
 
-    <!-- Optional theme -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
-      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-      crossorigin="anonymous"
-    />
+{% block content %}
+<div class="container" style="padding: 50px;">
+  <h2 class="text-center">What I can Automate with Django</h2>
+  <div class="row pt-5">
+    <!-- Import data -->
+    <div class="col-md-4 d-flex align-items-stretch">
+      <a href="{% url 'import_data' %}" class="text-decoration-none text-dark w-100">
+        <div class="card shadow h-100" style="background-color: #5C7F74; color: white;">
+          <div class="card-header">
+            <h4>Import Data</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Imports data from CSV file to any table.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <!-- Export Data -->
+    <div class="col-md-4 d-flex align-items-stretch">
+      <a href="{% url 'export_data' %}" class="text-decoration-none text-dark w-100">
+        <div class="card shadow h-100" style="background-color: #B7D1BF; color: black;">
+          <div class="card-header">
+            <h4>Export Data</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Exports data from a specific table to a CSV file.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <!-- Bulk Emails -->
+    <div class="col-md-4 d-flex align-items-stretch">
+      <a href="#" class="text-decoration-none text-dark w-100">
+        <div class="card shadow h-100" style="background-color: #F87E65; color: white;">
+          <div class="card-header">
+            <h4>Bulk Emails</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Sends bulk emails to users</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
-    <br>
-    <a href = "{% url 'import_data' %}">Import Data</a>
-    <a href = "{% url 'export_data' %}">Export Data</a>
-  </body>
-</html>
+  <div class="row pt-5">
+    <!-- Email Tracking -->
+    <div class="col-md-4 d-flex align-items-stretch">
+      <a href="#" class="text-decoration-none text-dark w-100">
+        <div class="card shadow h-100" style="background-color: #F6C3B1; color: black;">
+          <div class="card-header">
+            <h4>Email Tracking</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Tracks emails and shows open and click rate</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <!-- Compress Images -->
+    <div class="col-md-4 d-flex align-items-stretch">
+      <a href="#" class="text-decoration-none text-dark w-100">
+        <div class="card shadow h-100" style="background-color: #5C7F74; color: white;">
+          <div class="card-header">
+            <h4>Compress Images</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Compresses Image files and reduces the size</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <!-- Web Scraping -->
+    <div class="col-md-4 d-flex align-items-stretch">
+      <a href="#" class="text-decoration-none text-dark w-100">
+        <div class="card shadow h-100" style="background-color: #F6C3B1; color: black;">
+          <div class="card-header">
+            <h4>Web Scraping</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Scrapes websites for useful information</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
