started email tracker

--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
   <div class="row pt-5">
     <!-- Email Tracking -->
     <div class="col-md-4 d-flex align-items-stretch">
-      <a href="#" class="text-decoration-none text-dark w-100">
+      <a href="{% url 'track_dashboard' %}" class="text-decoration-none text-dark w-100">
         <div
           class="card shadow h-100"
           style="background-color: #f6c3b1; color: black"
